MANVIR SANDBOX/src/objects/Project_Issue__c.object
<CustomObject>
    <description>Issues related to projects</description>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <label>Issue Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Issues</relationshipLabel>
        <relationshipName>R00N30000001FuwjEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Possible_Solutions_Delivery_Team__c</fullName>
        <label>Possible Solutions - Delivery Team</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Solutions_Sales__c</fullName>
        <label>Possible Solutions - Sales</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Solved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Issue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>OpenIssues</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,In Progress,Waiting for Response</value>
        </filters>
        <label>Open Issues</label>
    </listViews>
    <listViews>
        <fullName>SolvedIssues</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed - Solved</value>
        </filters>
        <label>Solved Issues</label>
    </listViews>
    <nameField>
        <label>Project Issue</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Issues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>